fixing text-overflow ellipsis on columns name; closes #47

--- a/src/sass/_columns.scss
+++ b/src/sass/_columns.scss
@@ -24,6 +24,8 @@
 
         .planner-column-header-inner {
           border-bottom: 5px solid #cccccc;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
     }
 }
